[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="ocsp-checker"
version="1.9.11"
description="Library used to check the OCSP revocation status for a x509 digital certificate."

readme= {file = "README.md", content-type = "text/markdown"}
authors=[{ name = "Joe Gatt", email = "gattjoseph@hotmail.com" }]
license= {file = "LICENSE.txt" }
classifiers=[
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords=["ssl, tls, ocsp, python, security"]
dependencies = [
    "cryptography~=39.0",
    "nassl~=5.0",
    "validators>=0.20.0",
    "certifi",
]
requires-python = ">=3.7"

[tools.setuptools.packages]
find = {}

[project.urls]
"homepage" = "https://github.com/MetLife/OCSPChecker"
"documentation" = "https://github.com/MetLife/OCSPChecker/blob/master/README.md"
"repository" = "https://github.com/MetLife/OCSPChecker"
"changelog" = "https://github.com/MetLife/OCSPChecker/blob/master/CHANGELOG.md"

[project.scripts]
ocspchecker = "ocspchecker.__main__:main"