[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="ocsp-checker"
version="1.9.14"
description="Library used to check the OCSP revocation status for a x509 digital certificate."

readme= {file = "README.md", content-type = "text/markdown"}
authors=[{ name = "Joe Gatt", email = "gattjoseph@hotmail.com" }]
license= {file = "LICENSE.txt" }
classifiers=[
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords=["ssl, tls, ocsp, python, security"]
dependencies = [
    "cryptography~=43.0",
    "nassl~=5.2",
    "certifi",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    'pytest',
]

[tools.setuptools.packages]
find = {}

[project.urls]
"homepage" = "https://github.com/MetLife/OCSPChecker"
"documentation" = "https://github.com/MetLife/OCSPChecker/blob/master/README.md"
"repository" = "https://github.com/MetLife/OCSPChecker"
"changelog" = "https://github.com/MetLife/OCSPChecker/blob/master/CHANGELOG.md"

[project.scripts]
ocspchecker = "ocspchecker.__main__:main"


[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
force_sort_within_sections = true
include_trailing_comma = true
known_local_folder = ["ocspchecker"]
length_sort = true
line_length = 100
multi_line_output = 3
no_sections = false
profile = "black"
py_version=312
reverse_relative = true
reverse_sort = true
skip_gitignore = true
use_parentheses = true

[tool.pyright]
root = ["ocspchecker"]
include = ["ocspchecker" , "tests"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonPlatform = "All"
pythonVersion = "3.12"
typeCheckingMode = "basic"
